added description and footer for the other site

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -18,8 +18,19 @@ en: &DEFAULT_EN
     buttonlink: "#services"
 
   services:
+    description: "To meet the goals of this challenge, participants will be asked
+to create an AI bot that completes 4 automation tasks, organized
+at an increasing level of difficulty for a given application.
+An excel spreadsheet will be provided with all the
+information the bot is anticipated to provide as input for the
+application. This will be provided in a tabular form, where
+each row constitutes the set of fields needed for a single user
+entry. Each row will include the following columns: First
+name, Username, Contact Number, Manager, Email, Job Description,
+Level, and Leave Reason. This dataset will be used
+to facilitate all 4 tasks."
     title: "Tasks"
-    text: "* Click on the task title in order to access tha task."
+    text: "* Click on the task title in order to access the task."
     section: details
     list:
       - title: "Beginner"
